k8s-manifests/logging-fluent-bit.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logging
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd-bit
  namespace: logging
  labels:
    k8s-app: fluentd-bit-logging
spec:
  selector:
    matchLabels:
      k8s-app: fluentd-bit-logging
  template:
    metadata:
      labels:
        k8s-app: fluentd-bit-logging
    spec:
      containers:
      - name: fluentd-bit
        image: fluent/fluent-bit:2.1.8
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: varlibdockercontainers
          mountPath: /var/lib/docker/containers
          readOnly: true
        - name: config
          mountPath: /fluent-bit/etc/
      terminationGracePeriodSeconds: 10
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker/containers
      - name: config
        configMap:
          name: fluent-bit-config
