k8s-manifests/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: libro-mind
spec:
  type: NodePort # Ingress handles the LoadBalancer
  selector:
    app: frontend
  ports:
  - name: http-frontend
    port: 3000
    targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: libro-mind
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: libro-mind-frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http-frontend
          containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 10
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "400m"
